			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

06-Aug-2005
~~~~~~~~~~~
Updated French manual translation (Arnaud Calvo).
Fixed memory leak in new SOAP RPC calls (Thomas Leonard).

04-Aug-2005
~~~~~~~~~~~
Bugfix: Ultimate++ could crash the filer when its window was iconified
	(Guido Schimmels).

01-Aug-2005
~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).

31-Jul-2005
~~~~~~~~~~~
Added a button for configuring video thumbnails (with Stephen Watson's
VideoThumbnail application) to the Options window (Thomas Leonard).
Manual updates.
Right-clicking on a launcher button shows available versions (Thomas Leonard).
Bugfix: Added some missing gdk_event_free() calls (Thomas Leonard).
Bugfix: In vertical ordering mode, the blank space after all the items
	acted as if there were icons there (reported by Arnaud Calvo).
			
30-Jul-2005
~~~~~~~~~~~
Don't abort on BadWindow errors. GTK bug #152151 is still not fixed after
nearly a year, so give up trying to fix it and just ignore it (Thomas Leonard).
Don't show Help menu item for applications with no Help subdirectory (Thomas
Leonard).

29-Jul-2005
~~~~~~~~~~~
Added option to only show iconified windows belonging to the current workspace
(Tom Morton).
Added option to allow vertical ordering when laying out the icon view 
(Piotr Zielinski).

28-Jul-2005
~~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).

27-Jul-2005
~~~~~~~~~~~
Renamed Python MIME icon to keep up with freedesktop.org's current thinking in
the endless text vs application war (Thomas Leonard).

26-Jul-2005
~~~~~~~~~~~
Removed custom platform detection (which was designed to allow a single
copy of ROX-Filer to contain binaries for multiple platforms). Let the
packaging system deal with it (Thomas Leonard).

25-Jul-2005
~~~~~~~~~~~
Check for shared-mime-info 0.16 when building (Stephen Watson).

24-Jul-2005
~~~~~~~~~~~
An executable text file of unknown type is marked as executable if its name