@@ -6,6 +6,10 @@
 ~~~~~~~~~~~
 Updated French manual translation (Arnaud Calvo).
 Fixed memory leak in new SOAP RPC calls (Thomas Leonard).
+Provide alternate to_html.xsl file for different location of Docbook
+stylesheets (Stephen Watson).
+GTK bug #152151 also causes BadDrawable errors so ignore them as well
+(Stephen Watson).
 
 04-Aug-2005
 ~~~~~~~~~~~
